--- a/view/directoryImages.html
+++ b/view/directoryImages.html
@@ -10,9 +10,9 @@
 <body>
 <div class="container">
     <header-dir></header-dir>
-    <main-text></main-text>
+    <dir-images></dir-images>
     <div class="fig">
-        <figure ng-repeat="pic in instagramImage.pics">
+        <figure ng-repeat="pic in imageGallery.pics">
             <img src="{{pic}}"/>
         </figure>
     </div>
