--- a/view/edit.html
+++ b/view/edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" ng-app="editApp">
+<html lang="en-US" ng-app="indexApp">
 <head>
     <meta charset="UTF-8">
     <title>Employee Registration</title>
@@ -8,17 +8,10 @@
 
 <body>
 
-<div class="container hundred">
-    <div class="row">
-        <ol class="breadcrumb">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/view/register.html">Add employee</a></li>
-            <li><a href="/view/list.html">List Employee</a></li>
-        </ol>
-    </div>
-</div>
+<div ng-controller="editController" class="container">
 
-<div ng-controller="EditController" class="container">
+    <header-dir></header-dir>
+
     <form novalidate class="form-register">
 
         <div class='alert alert-danger' ng-hide="ShowHide()"> <p align="center"> Submitting Error </p></div>
@@ -26,35 +19,33 @@
         <div class="form-group">
 
             <label>First Name</label>
-            <input type="text" class="form-control" ng-model="myForm.fname" value="Quuuuu" required>
+            <input type="text" class="form-control" ng-model="editController.fname" required>
 
             <div class="form-group">
                 <label>Last Name</label>
-                <input type="text" class="form-control" ng-model="myForm.lname" placeholder="Last Name" required>
+                <input type="text" class="form-control" ng-model="editController.lname" required>
             </div>
 
             <div class="form-group">
                 <label>Employee Age</label>
-                <input type="number" class="form-control" ng-model="myForm.age" placeholder="Employee Age" min="18" max="60" required>
+                <input type="number" class="form-control" ng-model="editController.age" min="18" max="60" required>
             </div>
 
-            <div class="form-group" >
+            <div class="form-group">
                 <label>Company</label>
-                <select ng-model="myForm.company" class="form-control" required>
-                    <option value="">Select</option>
-                    <option ng-repeat="c in company" value="{{c.id}}">{{c.company_name}}</option>
+                <select ng-model="editController.company" class="form-control" required>
+                    <option ng-repeat="c in editController.companies"
+                            value="{{c.id}}" ng-selected="editController.company == c.id">{{c.company_name}}</option>
                 </select>
             </div>
 
-            <button ng-click="Save(myForm)" class="btn btn-lg btn-primary btn-block"><i class="fa fa-key"></i> Register me</button>
+            <button ng-click="Update(editController)" class="btn btn-lg btn-primary btn-block"><i class="fa fa-key"></i> Edit Registration</button>
             <a class="btn btn-lg btn-default btn-block" href="/index.html"><i class="fa fa-times-circle"></i> Cancel</a>
 
         </div>
     </form>
 </div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-<script src="../js/edit.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+    <script src="../js/common.js"></script>
 </body>
 </html>
