--- a/view/instagram.html
+++ b/view/instagram.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <header-dir></header-dir>
-    <main-text></main-text>
+    <instagram-picture></instagram-picture>
     <div class="fig">
         <figure ng-repeat="pic in instagramImage.pics">
             <img src="{{pic}}"/>
